--- a/Connect4/index.html
+++ b/Connect4/index.html
@@ -8,30 +8,84 @@
 </head>
 <body>
 
-<div id="connect4MainCanvasDiv" style="height: 500px; margin-bottom:1rem;">
-    <canvas id="connect4MainCanvas" width="450" height="450" style="display:block; border:1px solid black; margin:auto;">This webapp is not supported/enabled by your browser.  Please enable javascript and use a browser that supports HTML5 (such as Chrome, Safari, Firefox, Internet Explorer, etc.)</canvas>
-</div>
-<style>
-#difficultyLabel.grayed,
-#difficultyValue.grayed,
-#boardWidthLabel.grayed,
-#widthValue.grayed,
-#boardHeightLabel.grayed,
-#heightValue.grayed,
-#connectNumLabel.grayed,
-#connectNumValue.grayed {
-    color: gray;
-}
-</style>
-<div style="text-align:center;">
-    <button id="newGameBtn">Restore Defaults</button><br /><br />
-    <label id="difficultyLabel" for="difficulty">Difficulty:</label> <input type="range" id="difficulty" min=2 max=9 value=6><output id="difficultyValue">5</output><br />
-    <label id="processingTimeLabel" for="processingTime">Opponent's Max Thinking Time:</label> <input type="range" id="processingTime" min=2 max=120 value=10><output id="processingTimeValue">10</output><span>s</span><br />
-    <span id="textOutputSpan"></span><br /><br />
-    <label id="boardWidthLabel" for="boardWidth">Board Width:</label> <input type="range" id="boardWidth" min=5 max=9 value=7><output id="widthValue">7</output><br />
-    <label id="boardHeightLabel" for="boardHeight">Board Height:</label> <input type="range" id="boardHeight" min=5 max=9 value=6><output id="heightValue">6</output><br />
-    <label id="connectNumLabel" for="connectNum">Number to connect:</label> <input type="range" id="connectNum" min=3 max=5 value=4><output id="connectNumValue">4</output><br />    
-</div>
+    <style>
+        #difficultyLabel.grayed,
+        #difficultyValue.grayed,
+        #boardWidthLabel.grayed,
+        #widthValue.grayed,
+        #boardHeightLabel.grayed,
+        #heightValue.grayed,
+        #connectNumLabel.grayed,
+        #connectNumValue.grayed {
+            color: gray;
+        }
+
+        #connect4MainCanvasDiv {
+            margin-bottom: 1rem;
+            border: 1px solid red;
+        }
+        #connect4MainCanvasDiv.c4-fixed-height {
+            height:500px;
+        }
+        #connect4MainCanvas {
+            display: block;
+            border: 1px solid black;
+            margin: auto;
+        }
+
+        #connect4Controls {
+            text-align: center;
+            font-size: 0.95rem;
+            border: 1px solid black;
+        }
+
+        input[type=range] {
+            display: inline;
+            width: auto;
+            margin-left: 0.5rem;
+        }
+
+        label {
+            display: inline;
+            margin: 0;
+            font-weight: normal;
+        }
+
+        output {
+            display: inline;
+            font-size: inherit;
+            line-height: inherit;
+            color: black;
+        }
+    </style>
+    <div id="connect4MainCanvasDiv" class="c4-fixed-height">
+        <canvas id="connect4MainCanvas" width="450" height="450">This webapp is not supported/enabled by your browser.  Please enable javascript and use a browser that supports HTML5 (such as Chrome, Safari, Firefox, Internet Explorer, etc.)</canvas>
+    </div>
+    <div id="connect4Controls">
+        <button id="newGameBtn">Restore Defaults</button><br /><br />
+        <label id="difficultyLabel" for="difficulty">Difficulty:</label>
+        <output id="difficultyValue">5</output>
+        <input type="range" id="difficulty" min=2 max=9 value=6>
+        <br />
+        <label id="processingTimeLabel" for="processingTime">Opponent's Max Thinking Time:</label>
+        <output id="processingTimeValue">10</output><span>s</span>
+        <input type="range" id="processingTime" min=2 max=120 value=10>
+        <br />
+        <span id="textOutputSpan"></span><br />
+        <br />
+        <label id="boardWidthLabel" for="boardWidth">Board Width:</label>
+        <output id="widthValue">7</output>
+        <input type="range" id="boardWidth" min=5 max=9 value=7>
+        <br />
+        <label id="boardHeightLabel" for="boardHeight">Board Height:</label>
+        <output id="heightValue">6</output>
+        <input type="range" id="boardHeight" min=5 max=9 value=6>
+        <br />
+        <label id="connectNumLabel" for="connectNum">Number to connect:</label>
+        <output id="connectNumValue">4</output>
+        <input type="range" id="connectNum" min=3 max=5 value=4>
+        <br />
+    </div>
 
     <!--
     <div>
