Adjust animation; refactor

--- a/Connect4/index.html
+++ b/Connect4/index.html
@@ -18,7 +18,7 @@
                 <span class="table-cell">
                     <label id="difficultyLabel" for="difficulty">Difficulty:</label>
                     <output id="difficultyValue">5</output>
-                </span><span class="table-cell">
+                </span><span class="table-cell padding-left">
                     <input type="range" id="difficulty" min=1 max=7 value=5>
                 </span>
             </span>
@@ -26,7 +26,7 @@
                 <span class="table-cell">
                     <label id="boardWidthLabel" for="boardWidth">Board Width:</label>
                     <output id="widthValue">7</output>
-                </span><span class="table-cell">
+                </span><span class="table-cell padding-left">
                     <input type="range" id="boardWidth" min=5 max=9 value=7>
                 </span>
             </span>
@@ -34,7 +34,7 @@
                 <span class="table-cell">
                     <label id="boardHeightLabel" for="boardHeight">Board Height:</label>
                     <output id="heightValue">6</output>
-                </span><span class="table-cell">
+                </span><span class="table-cell padding-left">
                     <input type="range" id="boardHeight" min=5 max=9 value=6>
                 </span>
             </span>
@@ -42,7 +42,7 @@
                 <span class="table-cell">
                     <label id="connectNumLabel" for="connectNum">Number to connect:</label>
                     <output id="connectNumValue">4</output>
-                </span><span class="table-cell">
+                </span><span class="table-cell padding-left">
                     <input type="range" id="connectNum" min=3 max=5 value=4>
                 </span>
             </span>
