Add control for if computer plays 1st or 2nd

--- a/Connect4/index.html
+++ b/Connect4/index.html
@@ -24,6 +24,14 @@
             </span>
             <span class="table-row">
                 <span class="table-cell">
+                    <label id="aiPlayerLabel" for="aiPlayer">Computer plays:</label>
+                    <output id="aiPlayerValue">2nd</output>
+                </span><span class="table-cell padding-left">
+                    <input type="range" id="aiPlayer" min=1 max=2 value=2>
+                </span>
+            </span>
+            <span class="table-row">
+                <span class="table-cell">
                     <label id="boardWidthLabel" for="boardWidth">Board Width:</label>
                     <output id="widthValue">7</output>
                 </span><span class="table-cell padding-left">
